# gameengine

./: CMakeLists.txt  todo.txt
includes/glad/: gl.h
includes/imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp
src/: gl.c  main.cpp
src/core/: AssetsManager.cpp  AssetsManager.hpp  Deserializer.hpp  GameObject.hpp  Renderer.hpp  Scene.hpp  SceneManager.hpp  Serializer.hpp  Texture.cpp  Texture.hpp
src/core/components/: Component.hpp  Light.cpp  Light.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Transform.cpp  Transform.hpp
src/gui/: AssetsBrowserPanel.cpp  AssetsBrowserPanel.hpp  ScenePanel.cpp  ScenePanel.hpp
src/shaders/lit/: shader.frag  shader.vert
src/shaders/unlit/: shader.frag  shader.vert
src/utils/: Logger.hpp  Shader.cpp  Shader.hpp  Utils.cpp  Utils.hpp  globals.cpp  globals.hpp
test/: Makefile  main.cpp
